# itinerary-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
apps/api-server/app/: bootstrap.py  main.py
apps/playground/: package.json
apps/playground/app/: globals.css  layout.tsx  page.tsx
apps/playground/components/: json-panel.tsx
docs/: api.md  architecture.md  data-models.md  github-launch.md  pitfalls.md  project-overview.md  release-checklist.md  repo-settings.md  roadmap.md
examples/: edit_request.json  example_itinerary.json  plan_request.json  python_quickstart.py  score_request.json
tests/: conftest.py  test_api.py  test_candidate_selector.py  test_edit_flow.py  test_edit_parser.py  test_planner.py  test_scorer.py
